<resources>
    <string name="action_edit_default_settings">Edit Default Settings</string>
    <string name="action_new_connection">New Connection</string>
    <string name="apps">Apps</string>
    <string name="center_mouse">Mouse @</string>
    <string name="clear_support_files">Clear All Support Files</string>
    <string name="clear_support_files_enabled">true</string>
    <string name="color_mode">Color Mode</string>
    <string name="copy_logcat">Copy Logcat</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="default_apps_url">https://raw.githubusercontent.com/more-than-just-kyrion/UserLOst-android/main/assets/Support/apps/apps.txt</string>
    <string name="default_custom_apps_enabled">false</string>
    <string name="default_custom_filesystem_enabled">false</string>
    <string name="default_filesystem_url">https://github.com/more-than-just-kyrion/UserLOst-android/releases/download/Debian-v7.7.9</string>
    <string name="default_hide_distributions">false</string>
    <string name="default_hide_sessions_filesystems">false</string>
    <string name="default_hide_vnc_extra_keys">false</string>
    <string name="default_hide_vnc_toolbar">false</string>
    <string name="default_vnc_input_mode">Direct, Hold Pan</string>
    <string name="disconnect">Disconnect</string>
    <string name="enter_text">Send Text</string>
    <string name="extra_keys_disable">Disable Extra Keys</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="help">Help</string>
    <string name="help_enabled">true</string>
    <string name="immersive_mode_disable">Disable Immersive Mode</string>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="info">Info</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_mode_drag_pan_zoom_mouse">Direct, Hold Pan</string>
    <string name="input_mode_help">Input Mode Help</string>
    <string name="input_mode_single_handed">Single Handed</string>
    <string name="input_mode_touch_pan_zoom_mouse">Direct, Swipe Pan</string>
    <string name="input_mode_touchpad">Simulated Touchpad</string>
    <string name="keep_screen_awake_enable">Keep Screen Awake</string>
    <string name="landscape_force">Force Landscape Orientation</string>
    <string name="left_handed_mode">Left-Handed Mode</string>
    <string name="master_password_enable">Enable Master Password</string>
    <string name="more_debug_logging">More Debug Logging</string>
    <string name="one_to_one">One to One</string>
    <string name="position_toolbar_last_used">Restore Toolbar Position</string>
    <string name="position_toolbar_last_used_summary">(Applies to New Connections Only)</string>
    <string name="pref_app_category">App Preferences</string>
    <string name="pref_apps_title">Set URL for Apps Server</string>
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_category_camera">Camera</string>
    <string name="pref_clear_auto_start_summary">Stops any app from auto starting until enabled again.</string>
    <string name="pref_clear_auto_start_title">Clear Auto Start Settings</string>
    <string name="pref_clear_connect_type_summary">Will ask again what connection type you prefer on the next start.</string>
    <string name="pref_clear_connect_type_title">Clear Connection Type Settings</string>
    <string name="pref_clear_display_preferences_summary">Will ask again what display preferences you prefer on the next start.</string>
    <string name="pref_clear_display_preferences_title">Clear Display Preferences</string>
    <string name="pref_custom_apps_enabled_summary">Allows specifying a custom URL for the server which hosts the apps to list.</string>
    <string name="pref_custom_apps_enabled_title">Use Custom URL for Apps Server</string>
    <string name="pref_custom_dns_enabled_summary">Allows you to specify custom contents for the /etc/resolv.conf file.</string>
    <string name="pref_custom_dns_enabled_title">Use Custom resolv.conf File</string>
    <string name="pref_custom_filesystem_enabled_summary">Allows specifying a custom URL for the server which hosts the filesystem to use.</string>
    <string name="pref_custom_filesystem_enabled_title">Use Custom URL for Filesystem Server</string>
    <string name="pref_custom_hostname_enabled_summary">Allows you to specify custom hostname which will be used in /etc/hosts and /etc/hostname.</string>
    <string name="pref_custom_hostname_enabled_title">Use Custom Hostname</string>
    <string name="pref_default_landing_page_message">Select the page you would like to open the app with.</string>
    <string name="pref_default_landing_page_title">Default Landing Page</string>
    <string name="pref_default_vnc_input_mode_summary">Set the default VNC Input Mode. Can be overridden from VNC session toolbar.</string>
    <string name="pref_default_vnc_input_mode_title">Default VNC Input Mode</string>
    <string name="pref_dns_default">"search Home
nameserver 8.8.8.8
nameserver 8.8.4.4"</string>
    <string name="pref_dns_title">Set resolv.conf File Contents</string>
    <string name="pref_filesystem_title">Set URL for Filesystem Server</string>
    <string name="pref_hide_custom_toolbar_summary">Hides the toolbar that shows up when inside a VNC session.</string>
    <string name="pref_hide_custom_toolbar_title">Hide VNC Toolbar</string>
    <string name="pref_hide_distributions_summary">Do not display any app that is categorized as a distributions.</string>
    <string name="pref_hide_distributions_title">Hide Distributions</string>
    <string name="pref_hide_sessions_filesystems_summary">Simplifies app by hiding views that are not the default landing page.</string>
    <string name="pref_hide_sessions_filesystems_title">Hide Bottom Navigation</string>
    <string name="pref_hide_settings_default">false</string>
    <string name="pref_hide_settings_summary">Makes this setting menu inaccessible.</string>
    <string name="pref_hide_settings_title">Hide this Setting Menu</string>
    <string name="pref_hide_vnc_extra_keys_summary">Hides the extra keys that get displayed with the soft keyboard.</string>
    <string name="pref_hide_vnc_extra_keys_title">Hide VNC Extra Keys</string>
    <string name="pref_hostname_default">android-device</string>
    <string name="pref_hostname_title">Set Custom Hostname</string>
    <string name="pref_key_barcode_reticle_height">barcode_brh</string>
    <string name="pref_key_barcode_reticle_width">barcode_brw</string>
    <string name="pref_key_enable_barcode_size_check">barcode_ebsc</string>
    <string name="pref_key_minimum_barcode_width">barcode_mbw</string>
    <string name="pref_key_rear_camera_preview_size">rcpvs</string>
    <string name="pref_proot_category">PRoot Preferences</string>
    <string name="pref_proot_debugging_enabled_summary">"Only necessary if having problems with the app. Log file stored at
/mnt/sdcard/PRoot_Debug_Log"</string>
    <string name="pref_proot_debugging_enabled_title">PRoot Debugging Logs Enabled</string>
    <string name="pref_proot_debugging_level_default">-1</string>
    <string name="pref_proot_debugging_level_summary">The higher the number, the greater the verbosity.</string>
    <string name="pref_proot_debugging_level_title">Debug Verbosity Level</string>
    <string name="pref_proot_delete_debug_file_title">Delete Old Debug Files</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="preference_key_h264">bookmark.perf_gfx_h264</string>
    <string name="preference_key_h264_3g">bookmark.perf_gfx_h264</string>
    <string name="preference_key_ui_ask_on_exit">ui.ask_on_exit</string>
    <string name="preference_key_ui_auto_scroll_touchpointer">ui.auto_scroll_touchpointer</string>
    <string name="preference_key_ui_hide_action_bar">ui.hide_action_bar</string>
    <string name="preference_key_ui_hide_status_bar">ui.hide_status_bar</string>
    <string name="preference_key_ui_hide_zoom_controls">ui.hide_zoom_controls</string>
    <string name="preference_key_ui_invert_scrolling">ui.invert_scrolling</string>
    <string name="preference_key_ui_swap_mouse_buttons">ui.swap_mouse_buttons</string>
    <string name="report_bug">Report a bug</string>
    <string name="right_alt_as_iso_l3_shift">R-Alt as ISO L3 Shift (VNC only)</string>
    <string name="scaling">Scaling</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="send_key_again">Send Key Again</string>
    <string name="settings">Settings</string>
    <string name="settings_cat_performance">Performance Settings</string>
    <string name="settings_console_mode">Console Mode</string>
    <string name="settings_enable_3g_settings">3G Settings</string>
    <string name="settings_enable_gateway_settings">Enable Gateway</string>
    <string name="settings_enabled">true</string>
    <string name="settings_gateway_settings">Gateway Settings</string>
    <string name="settings_perf_desktop_composition">Desktop Composition</string>
    <string name="settings_perf_font_smoothing">Font Smoothing</string>
    <string name="settings_perf_full_window_drag">Window contents while dragging</string>
    <string name="settings_perf_gfx">GFX</string>
    <string name="settings_perf_gfx_h264">H264</string>
    <string name="settings_perf_menu_animation">Menu Animation</string>
    <string name="settings_perf_remotefx">RemoteFX</string>
    <string name="settings_perf_theming">Visual Styles</string>
    <string name="settings_perf_wallpaper">Desktop Background</string>
    <string name="settings_performance_3g">3G Performance</string>
    <string name="settings_redirect_microphone">Redirect Microphone</string>
    <string name="settings_redirect_sdcard">Redirect SD card</string>
    <string name="settings_redirect_sound">Redirect Sound</string>
    <string name="settings_remote_program">Remote Program</string>
    <string name="settings_screen_3g">3G Screen</string>
    <string name="settings_security">Security</string>
    <string name="settings_ui_ask_on_exit">Show Dialog on Exit</string>
    <string name="settings_ui_auto_scroll_touchpointer">Touch Pointer Auto Scroll</string>
    <string name="settings_ui_hide_action_bar">Hide Action Bar</string>
    <string name="settings_ui_hide_status_bar">Hide Status Bar</string>
    <string name="settings_ui_hide_zoom_controls">Hide Zoom Controls</string>
    <string name="settings_ui_invert_scrolling">Invert Scrolling</string>
    <string name="settings_ui_swap_mouse_buttons">Swap Mouse Buttons</string>
    <string name="settings_work_dir">Working Directory</string>
    <string name="special_keys">Send Keys</string>
    <string name="support_forum">Support Forum</string>
    <string name="toc">Terms &amp; Conditions</string>
    <string name="toc_enabled">true</string>
    <string name="wiki">Wiki</string>
    <string name="wiki_enabled">true</string>
</resources>