<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="pref_screen"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_app_category" android:key="pref_app_category" app:iconSpaceReserved="false">
        <ListPreference android:entries="@array/default_landing_pages" android:title="@string/pref_default_landing_page_title" android:key="pref_default_nav_location" android:summary="@string/pref_default_landing_page_message" android:defaultValue="@string/apps" android:entryValues="@array/default_landing_pages" app:iconSpaceReserved="false" />
        <Preference android:title="@string/pref_clear_auto_start_title" android:key="pref_clear_auto_start" android:summary="@string/pref_clear_auto_start_summary" app:iconSpaceReserved="false" />
        <Preference android:title="@string/pref_clear_connect_type_title" android:key="pref_clear_connect_type" android:summary="@string/pref_clear_connect_type_summary" app:iconSpaceReserved="false" />
        <Preference android:title="@string/pref_clear_display_preferences_title" android:key="pref_clear_display_preferences" android:summary="@string/pref_clear_display_preferences_summary" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_hide_sessions_filesystems_title" android:key="pref_hide_sessions_filesystems" android:summary="@string/pref_hide_sessions_filesystems_summary" android:defaultValue="@string/default_hide_sessions_filesystems" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_hide_distributions_title" android:key="pref_hide_distributions" android:summary="@string/pref_hide_distributions_summary" android:defaultValue="@string/default_hide_distributions" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_custom_hostname_enabled_title" android:key="pref_custom_hostname_enabled" android:summary="@string/pref_custom_hostname_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
        <EditTextPreference android:title="@string/pref_hostname_title" android:key="pref_hostname" android:dependency="pref_custom_hostname_enabled" android:defaultValue="@string/pref_hostname_default" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_custom_dns_enabled_title" android:key="pref_custom_dns_enabled" android:summary="@string/pref_custom_dns_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
        <EditTextPreference android:title="@string/pref_dns_title" android:key="pref_dns" android:dependency="pref_custom_dns_enabled" android:defaultValue="@string/pref_dns_default" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_custom_apps_enabled_title" android:key="pref_custom_apps_enabled" android:summary="@string/pref_custom_apps_enabled_summary" android:defaultValue="@string/default_custom_apps_enabled" app:iconSpaceReserved="false" />
        <EditTextPreference android:title="@string/pref_apps_title" android:key="pref_apps" android:dependency="pref_custom_apps_enabled" android:defaultValue="@string/default_apps_url" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_custom_filesystem_enabled_title" android:key="pref_custom_filesystem_enabled" android:summary="@string/pref_custom_filesystem_enabled_summary" android:defaultValue="@string/default_custom_filesystem_enabled" app:iconSpaceReserved="false" />
        <EditTextPreference android:title="@string/pref_filesystem_title" android:key="pref_filesystem" android:dependency="pref_custom_filesystem_enabled" android:defaultValue="@string/default_filesystem_url" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_hide_custom_toolbar_title" android:key="pref_hide_vnc_toolbar" android:summary="@string/pref_hide_custom_toolbar_summary" android:defaultValue="@string/default_hide_vnc_toolbar" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_hide_vnc_extra_keys_title" android:key="pref_hide_vnc_extra_keys" android:summary="@string/pref_hide_vnc_extra_keys_summary" android:defaultValue="@string/default_hide_vnc_extra_keys" app:iconSpaceReserved="false" />
        <ListPreference android:entries="@array/vnc_input_modes" android:title="@string/pref_default_vnc_input_mode_title" android:key="pref_default_vnc_input_mode" android:summary="@string/pref_default_vnc_input_mode_summary" android:defaultValue="@string/default_vnc_input_mode" android:entryValues="@array/vnc_input_modes" app:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/pref_hide_settings_title" android:key="pref_hide_settings" android:summary="@string/pref_hide_settings_summary" android:defaultValue="@string/pref_hide_settings_default" app:iconSpaceReserved="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_proot_category" android:key="pref_proot_category" app:iconSpaceReserved="false">
        <CheckBoxPreference android:title="@string/pref_proot_debugging_enabled_title" android:key="pref_proot_debug_enabled" android:summary="@string/pref_proot_debugging_enabled_summary" android:defaultValue="false" app:iconSpaceReserved="false" />
        <ListPreference android:entries="@array/proot_debug_levels" android:title="@string/pref_proot_debugging_level_title" android:key="pref_proot_debug_level" android:summary="@string/pref_proot_debugging_level_summary" android:dependency="pref_proot_debug_enabled" android:defaultValue="@string/pref_proot_debugging_level_default" android:entryValues="@array/proot_debug_levels" app:iconSpaceReserved="false" />
        <Preference android:title="@string/pref_proot_delete_debug_file_title" android:key="pref_proot_delete_debug_file" android:dependency="pref_proot_debug_enabled" app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>
