<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/pref_category_camera">
        <androidx.preference.ListPreference android:persistent="true" android:title="@string/pref_title_rear_camera_preview_size" android:key="@string/pref_key_rear_camera_preview_size" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/pref_category_barcode_detection">
        <androidx.preference.SeekBarPreference android:persistent="true" android:max="95" android:title="@string/pref_title_barcode_reticle_width" android:key="@string/pref_key_barcode_reticle_width" android:summary="@string/pref_summary_barcode_reticle_width" android:defaultValue="80" app:min="50" app:showSeekBarValue="true" />
        <androidx.preference.SeekBarPreference android:persistent="true" android:max="80" android:title="@string/pref_title_barcode_reticle_height" android:key="@string/pref_key_barcode_reticle_height" android:summary="@string/pref_summary_barcode_reticle_height" android:defaultValue="35" app:min="20" app:showSeekBarValue="true" />
        <androidx.preference.SwitchPreferenceCompat android:persistent="true" android:title="@string/pref_title_enable_barcode_size_check" android:key="@string/pref_key_enable_barcode_size_check" android:summary="@string/pref_summary_enable_barcode_size_check" android:defaultValue="true" />
        <androidx.preference.SeekBarPreference android:persistent="true" android:max="80" android:title="@string/pref_title_minimum_barcode_width" android:key="@string/pref_key_minimum_barcode_width" android:summary="@string/pref_summary_minimum_barcode_width" android:defaultValue="50" app:min="20" app:showSeekBarValue="true" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
