<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/moveToolbar" app:actionViewClass="android.widget.ImageButton" app:showAsAction="always" />
    <item android:icon="@drawable/showkeys" android:id="@id/extraKeysToggle" android:padding="0.0dp" android:onClick="extraKeysToggle" app:showAsAction="always" />
    <item android:icon="@drawable/ic_keyboard_gray_48dp" android:id="@id/actionShowKeyboard" android:padding="0.0dp" android:onClick="toggleKeyboard" app:showAsAction="always" />
    <item android:icon="@drawable/extra_keys" android:id="@id/itemExtraKeys" android:title="@string/extra_keys_disable" />
    <item android:icon="@android:drawable/ic_input_get" android:id="@id/itemInputMode" android:title="@string/input_mode" android:alphabeticShortcut="p" android:numericShortcut="5">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/itemInputTouchPanZoomMouse" android:title="@string/input_mode_touch_pan_zoom_mouse" />
                <item android:id="@id/itemInputDragPanZoomMouse" android:title="@string/input_mode_drag_pan_zoom_mouse" />
                <item android:id="@id/itemInputTouchpad" android:title="@string/input_mode_touchpad" />
                <item android:id="@id/itemInputSingleHanded" android:title="@string/input_mode_single_handed" />
            </group>
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_zoom" android:id="@id/itemScaling" android:title="@string/scaling" android:alphabeticShortcut="z" android:numericShortcut="4">
        <menu>
            <group android:id="@id/groupScaling" android:checkableBehavior="single">
                <item android:id="@id/itemFitToScreen" android:checked="true" android:title="@string/fit_to_screen" />
                <item android:id="@id/itemZoomable" android:title="@string/scaling_zoomable" />
                <item android:id="@id/itemOneToOne" android:title="@string/one_to_one" />
            </group>
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@id/itemDisconnect" android:title="@string/disconnect" android:alphabeticShortcut="x" android:numericShortcut="7" />
    <item android:icon="@android:drawable/ic_dialog_dialer" android:id="@id/itemSpecialKeys" android:title="@string/special_keys" android:alphabeticShortcut="k" android:numericShortcut="1" />
    <item android:id="@id/itemSendKeyAgain" android:title="@string/send_key_again" android:alphabeticShortcut="g" />
    <item android:icon="@android:drawable/ic_menu_share" android:id="@id/itemCtrlAltDel" android:title="@string/ctrl_alt_del" android:alphabeticShortcut="r" android:numericShortcut="8" />
    <item android:icon="@android:drawable/ic_menu_edit" android:id="@id/itemEnterText" android:title="@string/enter_text" android:alphabeticShortcut="e" />
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@id/itemColorMode" android:title="@string/color_mode" android:alphabeticShortcut="c" android:numericShortcut="3" />
    <item android:icon="@android:drawable/ic_menu_mylocation" android:id="@id/itemCenterMouse" android:title="@string/center_mouse" android:alphabeticShortcut="m" android:numericShortcut="2" />
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@id/itemInfo" android:title="@string/info" android:alphabeticShortcut="i" android:numericShortcut="9" />
    <item android:icon="@android:drawable/ic_menu_help" android:id="@id/itemHelpInputMode" android:title="@string/input_mode_help" />
</menu>
