<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Advanced">
        <CheckBoxPreference android:title="@string/settings_enable_gateway_settings" android:key="bookmark.enable_gateway_settings" />
        <PreferenceScreen android:title="@string/settings_gateway_settings" android:key="bookmark.gateway_settings">
            <intent android:targetPackage="*" android:action="android.intent.action.VIEW" android:data="preferences://gateway_settings" android:targetClass="com.freerdp.freerdpcore.presentation.BookmarkActivity" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/settings_enable_3g_settings" android:key="bookmark.enable_3g_settings" />
        <PreferenceScreen android:title="@string/settings_screen_3g" android:key="bookmark.screen_3g">
            <intent android:targetPackage="*" android:action="android.intent.action.VIEW" android:data="preferences://screen_settings_3g" android:targetClass="com.freerdp.freerdpcore.presentation.BookmarkActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/settings_performance_3g" android:key="bookmark.performance_3g">
            <intent android:targetPackage="*" android:action="android.intent.action.VIEW" android:data="preferences://performance_flags_3g" android:targetClass="com.freerdp.freerdpcore.presentation.BookmarkActivity" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/settings_redirect_sdcard" android:key="bookmark.redirect_sdcard" />
        <com.freerdp.freerdpcore.utils.IntListPreference android:entries="@array/redirect_sound_array" android:title="@string/settings_redirect_sound" android:key="bookmark.redirect_sound" android:entryValues="@array/redirect_sound_values_array" />
        <CheckBoxPreference android:title="@string/settings_redirect_microphone" android:key="bookmark.redirect_microphone" />
        <com.freerdp.freerdpcore.utils.IntListPreference android:entries="@array/security_array" android:title="@string/settings_security" android:key="bookmark.security" android:entryValues="@array/security_values_array" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_remote_program" android:key="bookmark.remote_program" android:summary="notepad.exe" />
        <EditTextPreference android:singleLine="true" android:title="@string/settings_work_dir" android:key="bookmark.work_dir" />
        <CheckBoxPreference android:title="@string/settings_console_mode" android:key="bookmark.console_mode" />
    </PreferenceCategory>
</PreferenceScreen>
